# openapi.yaml
@@ -74,67 +74,68 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/MemberAddReply'
-    /v1/member/get:
+    /v1/member/get/{id}:
         get:
             tags:
                 - User
             operationId: User_MemberGet
             parameters:
-                - name: member.id
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/MemberGetReply'
+    /v1/member/list/get/balance/{low}/{high}:
+        get:
+            tags:
+                - User
+            operationId: User_ListMemberGetBetweenBalance
+            parameters:
+                - name: low
+                  in: path
+                  required: true
+                  schema:
+                    type: number
+                    format: double
+                - name: high
+                  in: path
+                  required: true
+                  schema:
+                    type: number
+                    format: double
+                - name: page.pageNum
                   in: query
                   schema:
                     type: integer
                     format: int64
-                - name: member.username
+                - name: page.pageSize
                   in: query
                   schema:
-                    type: string
-                - name: member.phone
-                  in: query
-                  schema:
-                    type: string
-                - name: member.password
-                  in: query
-                  schema:
-                    type: string
-                - name: member.email
-                  in: query
-                  schema:
-                    type: string
-                - name: member.avator
-                  in: query
-                  schema:
-                    type: string
-                - name: member.recharge
-                  in: query
-                  schema:
-                    type: number
-                    format: float
-                - name: member.balance
-                  in: query
-                  schema:
-                    type: number
-                    format: float
-                - name: member.role
-                  in: query
-                  schema:
-                    type: string
-                - name: member.permissions
-                  in: query
-                  schema:
-                    type: array
-                    items:
-                        type: string
-                - name: member.createdAt
-                  in: query
-                  schema:
-                    type: string
-                - name: member.updatedAt
-                  in: query
-                  schema:
-                    type: string
-                - name: member.deletedAt
-                  in: query
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListMemberGetBetweenBalanceReply'
+    /v1/member/list/get/email/{email}:
+        get:
+            tags:
+                - User
+            operationId: User_ListMemberGetByEmail
+            parameters:
+                - name: email
+                  in: path
+                  required: true
                   schema:
                     type: string
                 - name: page.pageNum
@@ -153,12 +154,103 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/MemberGetReply'
-    /v1/member/get/time/{start}/{end}:
+                                $ref: '#/components/schemas/ListMemberGetByEmailReply'
+    /v1/member/list/get/name/{name}:
         get:
             tags:
                 - User
-            operationId: User_MemberGetBetweenTime
+            operationId: User_ListMemberGetByName
+            parameters:
+                - name: name
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+                - name: page.pageNum
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: page.pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListMemberGetByNameReply'
+    /v1/member/list/get/phone/{phone}:
+        get:
+            tags:
+                - User
+            operationId: User_ListMemberGetByPhone
+            parameters:
+                - name: phone
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+                - name: page.pageNum
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: page.pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListMemberGetByPhoneReply'
+    /v1/member/list/get/recharge/{low}/{high}:
+        get:
+            tags:
+                - User
+            operationId: User_ListMemberGetBetweenRecharge
+            parameters:
+                - name: low
+                  in: path
+                  required: true
+                  schema:
+                    type: number
+                    format: double
+                - name: high
+                  in: path
+                  required: true
+                  schema:
+                    type: number
+                    format: double
+                - name: page.pageNum
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: page.pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListMemberGetBetweenRechargeReply'
+    /v1/member/list/get/time/{start}/{end}:
+        get:
+            tags:
+                - User
+            operationId: User_ListMemberGetBetweenTime
             parameters:
                 - name: start
                   in: path
@@ -186,7 +278,36 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/MemberGetBetweenTimeReply'
+                                $ref: '#/components/schemas/ListMemberGetBetweenTimeReply'
+    /v1/member/list/get/{id}:
+        get:
+            tags:
+                - User
+            operationId: User_ListMemberGetById
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int64
+                - name: page.pageNum
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: page.pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListMemberGetByIdReply'
     /v1/member/remove/{id}:
         delete:
             tags:
@@ -243,17 +364,47 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/PermissionAddReply'
-    /v1/permission/get:
+    /v1/permission/get/all:
+        get:
+            tags:
+                - User
+            operationId: User_PermissionGetAll
+            parameters:
+                - name: page.pageNum
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: page.pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/PermissionGetAllReply'
+    /v1/permission/get/{id}:
         get:
             tags:
                 - User
             operationId: User_PermissionGet
             parameters:
-                - name: permission.url
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int64
+                - name: page.pageNum
                   in: query
                   schema:
-                    type: string
-                - name: permission.parentId
+                    type: integer
+                    format: int64
+                - name: page.pageSize
                   in: query
                   schema:
                     type: integer
@@ -339,27 +490,41 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/RoleAddReply'
-    /v1/role/get:
+    /v1/role/get/all:
+        get:
+            tags:
+                - User
+            operationId: User_RoleGetAll
+            parameters:
+                - name: page.pageNum
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: page.pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/RoleGetAllReply'
+    /v1/role/get/{id}:
         get:
             tags:
                 - User
             operationId: User_RoleGet
             parameters:
-                - name: role.id
-                  in: query
+                - name: id
+                  in: path
+                  required: true
                   schema:
                     type: integer
                     format: int64
-                - name: role.roleName
-                  in: query
-                  schema:
-                    type: string
-                - name: role.permissions
-                  in: query
-                  schema:
-                    type: array
-                    items:
-                        type: string
                 - name: page.pageNum
                   in: query
                   schema:
@@ -422,6 +587,69 @@ components:
                 message:
                     type: string
             description: The response message containing the greetings
+        ListMemberGetBetweenBalanceReply:
+            type: object
+            properties:
+                members:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/MemberDTO'
+                page:
+                    $ref: '#/components/schemas/PageInfoReply'
+        ListMemberGetBetweenRechargeReply:
+            type: object
+            properties:
+                members:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/MemberDTO'
+                page:
+                    $ref: '#/components/schemas/PageInfoReply'
+        ListMemberGetBetweenTimeReply:
+            type: object
+            properties:
+                members:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/MemberDTO'
+                page:
+                    $ref: '#/components/schemas/PageInfoReply'
+        ListMemberGetByEmailReply:
+            type: object
+            properties:
+                members:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/MemberDTO'
+                page:
+                    $ref: '#/components/schemas/PageInfoReply'
+        ListMemberGetByIdReply:
+            type: object
+            properties:
+                members:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/MemberDTO'
+                page:
+                    $ref: '#/components/schemas/PageInfoReply'
+        ListMemberGetByNameReply:
+            type: object
+            properties:
+                members:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/MemberDTO'
+                page:
+                    $ref: '#/components/schemas/PageInfoReply'
+        ListMemberGetByPhoneReply:
+            type: object
+            properties:
+                members:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/MemberDTO'
+                page:
+                    $ref: '#/components/schemas/PageInfoReply'
         LoginReply:
             type: object
             properties:
@@ -447,9 +675,8 @@ components:
         MemberAddReply:
             type: object
             properties:
-                id:
-                    type: integer
-                    format: int64
+                ok:
+                    type: boolean
         MemberAddReq:
             type: object
             properties:
@@ -484,10 +711,10 @@ components:
                     type: string
                 recharge:
                     type: number
-                    format: float
+                    format: double
                 balance:
                     type: number
-                    format: float
+                    format: double
                 role:
                     type: string
                 permissions:
@@ -515,31 +742,18 @@ components:
                     type: string
                 recharge:
                     type: number
-                    format: float
+                    format: double
                 balance:
                     type: number
-                    format: float
+                    format: double
                 rid:
                     type: integer
                     format: int64
-        MemberGetBetweenTimeReply:
-            type: object
-            properties:
-                members:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/MemberDTO'
-                page:
-                    $ref: '#/components/schemas/PageInfoReply'
         MemberGetReply:
             type: object
             properties:
                 members:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/MemberDTO'
-                page:
-                    $ref: '#/components/schemas/PageInfoReply'
+                    $ref: '#/components/schemas/MemberDTO'
         MemberRemoveReply:
             type: object
             properties:
@@ -599,6 +813,15 @@ components:
                 parentId:
                     type: integer
                     format: int64
+        PermissionGetAllReply:
+            type: object
+            properties:
+                permission:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/PermissionDTO'
+                page:
+                    $ref: '#/components/schemas/PageInfoReply'
         PermissionGetReply:
             type: object
             properties:
@@ -606,6 +829,8 @@ components:
                     type: array
                     items:
                         $ref: '#/components/schemas/PermissionDTO'
+                page:
+                    $ref: '#/components/schemas/PageInfoReply'
         PermissionRemoveReply:
             type: object
             properties:
@@ -662,6 +887,15 @@ components:
                     items:
                         type: string
             description: 角色表增删改查
+        RoleGetAllReply:
+            type: object
+            properties:
+                roles:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/RoleDTO'
+                page:
+                    $ref: '#/components/schemas/PageInfoReply'
         RoleGetReply:
             type: object
             properties:
